/*
 * Copyright 2017, TeamDev Ltd. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.examples.todolist;

option (type_url_prefix) = "type.spine.examples.todolist";
option java_package = "org.spine3.examples.todolist.c.failures";
option java_multiple_files = false;
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";

import "todolist/identifiers.proto";
import "todolist/values.proto";

// The failure to update a task description.
//
// It is thrown if an attempt is made to update the task in either DELETED or COMPLETED state.
message CannotUpdateTaskDescription {

    // Failed the description update.
    DescriptionUpdateFailed update_failed = 1;
}

// The failure to update a task priority.
//
// It is thrown if an attempt is made to update the task in either DELETED or COMPLETED state.
message CannotUpdateTaskPriority {

    // Failed the priority update.
    PriorityUpdateFailed update_failed = 1;
}

// The failure to update a task due date.
//
// It is thrown if an attempt is made to update the task in either DELETED or COMPLETED state.
message CannotUpdateTaskDueDate {

    // Failed the due date update.
    TaskDueDateUpdateFailed update_failed = 1;
}

// The failure to update a label details.
//
// It is thrown if an attempt is made to update the label when the expected label details do not match the actual.
message CannotUpdateLabelDetails {

    // Failed the label details update.
    LabelDetailsUpdateFailed update_failed = 1;
}

// The failure to assign label to task.
//
// It is thrown if an attempt is made to assign the label to the task in either DELETED or COMPLETED state.
message CannotAssignLabelToTask {

    // Failed the label assigning to the task.
    AssignLabelToTaskFailed assign_label_failed = 1;
}

// The failure to remove label from task.
//
// It is thrown if an attempt is made to remove the label from the task in either DELETED or COMPLETED state.
message CannotRemoveLabelFromTask {

    // Failed the label removing from task.
    RemoveLabelFromTaskFailed remove_label_failed = 1;
}

// The failure to reopen a task.
//
// It is thrown if an attempt is made to reopen the task when task is not COMPLETED.
message CannotReopenTask {

    // Failed the task reopening.
    ReopenTaskFailed reopen_task_failed = 1;
}

// The failure to delete a task.
//
// It is thrown if an attempt is made to delete the task when task in either DELETED or COMPLETED state.
message CannotDeleteTask {

    // Failed the task deletion.
    DeleteTaskFailed delete_task_failed = 1;
}

// The failure to restore a task.
//
// It is thrown if an attempt is made to restore the task when task is not DELETED.
message CannotRestoreDeletedTask {

    // Failed the task restoring.
    RestoreDeletedTaskFailed restore_task_failed = 1;
}

// The failure to complete a task.
//
// It is thrown if an attempt is made to complete the task when task is not FINALIZED.
message CannotCompleteTask {

    // Failed the task completion.
    CompleteTaskFailed complete_task_failed = 1;
}

// The failure to create a task draft.
//
// It is thrown if an attempt is made to create the task draft when task is already has a state.
message CannotCreateDraft {

    // Failed the draft creation.
    CreateDraftFailed create_draft_failed = 1;
}

// The failure to finalize a draft.
//
// It is thrown if an attempt is made to finalize the task when task is not DRAFT.
message CannotFinalizeDraft {

    // Failed the draft finalization.
    FinalizeDraftFailed finalize_draft_failed = 1;
}

// The failure to update a task description.
//
// It is thrown if an attempt is made to update the description
// when the suggested description has less than three symbols.
message CannotUpdateTaskWithInappropriateDescription {

    // Failed the description update.
    DescriptionUpdateFailed update_failed = 1;
}

// The failure to create a task.
//
// It is thrown if an attempt is made to create the task
// when the suggested description has less than three symbols.
message CannotCreateTaskWithInappropriateDescription {

    // Failed the task creation.
    CreateBasicTaskFailed create_task_failed = 1;
}
